--- a/src/main/resources/templates/login-main.html
+++ b/src/main/resources/templates/login-main.html
@@ -10,8 +10,8 @@
     <title>Login</title>
 </head>
 <body>
-<article class="card-body mx-auto" style="max-width: 400px;" th:action="@{/login-main}">
-    <form th:action="@{/login-main}" th:method="post">
+<article class="card-body mx-auto" style="max-width: 400px;" th:action="@{/login}">
+    <form th:action="@{/login}" th:method="post">
         <label style="color: red" th:text="${session.message}"></label>
         <div class="form-group input-group">
             <div class="input-group-prepend">
