--- a/src/main/resources/templates/my-orders.html
+++ b/src/main/resources/templates/my-orders.html
@@ -26,8 +26,8 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav">
                 <a href="/menu" class="nav-item nav-link" th:text="#{header.menu}"/>
-                <a href="/cart" th:text="#{header.cart}" class="nav-item nav-link active"/>
-                <a href="/myorders" th:text="#{header.my_orders}" class="nav-item nav-link"/>
+                <a href="/cart" th:text="#{header.cart}" class="nav-item nav-link"/>
+                <a href="/myorders" th:text="#{header.my_orders}" class="nav-item nav-link active"/>
             </div>
             <div class="nav-item dropdown ml-auto">
                 <a class="nav-link dropdown-toggle" href="" id="dropdown09" style="color:black;" data-toggle="dropdown"
@@ -48,7 +48,7 @@
             <div class="navbar-nav">
                 <a href="/registration" th:if="${session.username==null}" class="nav-item nav-link"
                    th:text="#{header.registration}"/>
-                <a href="/login" th:if="${session.username==null}" class="nav-item nav-link" th:text="#{header.login}"/>
+                <a href="/login-main" th:if="${session.username==null}" class="nav-item nav-link" th:text="#{header.login}"/>
                 <a href="/logout" th:if="${session.username!=null}" class="nav-item nav-link"
                    th:text="#{header.logout}"/>
             </div>
